unpackaged/main/default/objects/fferpcore__ProcessLog__c/fferpcore__ProcessLog__c.object-meta.xml
<CustomObject>
    <label>Process Log</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Process Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>