unpackaged/main/default/objects/fferpcore__ProcessLog__c/fields/fferpcore__GroupingKey__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__GroupingKey__c</fullName>
    <description>Stores the grouping key, which is generated by concatenating the values of the grouping fields.</description>
    <label>Grouping Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>