unpackaged/main/default/objects/fferpcore__ProcessLog__c/fields/fferpcore__Message__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>