unpackaged/main/default/objects/fferpcore__ProcessLog__c/fields/fferpcore__ProcessRun__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ProcessRun__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Run</label>
    <referenceTo>fferpcore__ProcessRun__c</referenceTo>
    <relationshipLabel>Process Logs</relationshipLabel>
    <relationshipName>Process_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>