unpackaged/main/default/objects/fferpcore__ProcessLog__c/fields/fferpcore__ProcessUserGroup__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ProcessUserGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Process User Group.</description>
    <label>Process User Group</label>
    <referenceTo>fferpcore__ProcessUserGroup__c</referenceTo>
    <relationshipLabel>Process Logs</relationshipLabel>
    <relationshipName>Process_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>