unpackaged/main/default/objects/fferpcore__ProcessLog__c/fields/fferpcore__QueryLocatorResultOrderingSequence__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__QueryLocatorResultOrderingSequence__c</fullName>
    <description>The ordering sequence in which query locator result records are sorted.</description>
    <label>Query Locator Result Ordering Sequence</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>