unpackaged/main/default/objects/fferpcore__ProcessLog__c/fields/fferpcore__RecordId__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__RecordId__c</fullName>
    <description>ID of the record that is to be processed.</description>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>