unpackaged/main/default/objects/fferpcore__ProcessLog__c/fields/fferpcore__RelatedRecord__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__RelatedRecord__c</fullName>
    <description>Contains the value of Related Record ID. Displays the Record ID if there is no Related Record ID available.</description>
    <formula>IF(NOT(ISBLANK(fferpcore__RelatedRecordId__c)), HYPERLINK('/'+fferpcore__RelatedRecordId__c, fferpcore__RelatedRecordId__c) , HYPERLINK('/'+ fferpcore__RecordId__c , fferpcore__RecordId__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record</label>
    <type>Text</type>
</CustomField>