unpackaged/main/default/objects/fferpcore__ProcessLog__c/fields/fferpcore__RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__RelatedRecordId__c</fullName>
    <description>ID of the related record. This could be an intermediate record or output record's ID.</description>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>