unpackaged/main/default/objects/fferpcore__ProcessLog__c/fields/fferpcore__Status__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Status__c</fullName>
    <description>Processing status of the record.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>PENDING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>