unpackaged/main/default/objects/fferpcore__ProcessLog__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__RelatedRecord__c</columns>
    <columns>fferpcore__Status__c</columns>
    <columns>fferpcore__Message__c</columns>
    <columns>fferpcore__ProcessRun__c</columns>
    <columns>fferpcore__ParentProcessRun__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>